src/tui/render/snapshots/phig_cli__tui__render__tests__log-narrow-60x16.snap
---
source: src/tui/render/tests.rs
assertion_line: 652
expression: "styled_screen(60, 16, &sample_app())"
---
TEXT
 LOG  phig-demo · main · HEAD
› ◌ aaaaaaaa 1700000000 Pat HEAD→main make history pleasant













 j/k move · Enter open · / search · v mark · ? help     1/1
STYLES
0:0-4 fg=Cyan bg=Reset mod=BOLD | REVERSED text=" LOG "
0:6-14 fg=Reset bg=Reset mod=BOLD text="phig-demo"
0:15-17 fg=DarkGray bg=Reset mod=NONE text=" · "
0:18-21 fg=Green bg=Reset mod=NONE text="main"
0:22-28 fg=DarkGray bg=Reset mod=NONE text=" · HEAD"
1:0-3 fg=Cyan bg=Reset mod=BOLD text="› ◌ "
1:4-11 fg=Yellow bg=Reset mod=BOLD text="aaaaaaaa"
1:12-12 fg=Reset bg=Reset mod=BOLD text=" "
1:13-27 fg=DarkGray bg=Reset mod=BOLD text="1700000000 Pat "
1:28-31 fg=Cyan bg=Reset mod=BOLD text="HEAD"
1:32-32 fg=DarkGray bg=Reset mod=BOLD text="→"
1:33-36 fg=Cyan bg=Reset mod=BOLD text="main"
1:37-59 fg=Reset bg=Reset mod=BOLD text=" make history pleasant "
15:1-4 fg=Reset bg=Reset mod=BOLD text="j/k "
15:5-11 fg=DarkGray bg=Reset mod=NONE text="move · "
15:12-17 fg=Reset bg=Reset mod=BOLD text="Enter "
15:18-24 fg=DarkGray bg=Reset mod=NONE text="open · "
15:25-26 fg=Reset bg=Reset mod=BOLD text="/ "
15:27-35 fg=DarkGray bg=Reset mod=NONE text="search · "
15:36-37 fg=Reset bg=Reset mod=BOLD text="v "
15:38-44 fg=DarkGray bg=Reset mod=NONE text="mark · "
15:45-46 fg=Reset bg=Reset mod=BOLD text="? "
15:47-50 fg=DarkGray bg=Reset mod=NONE text="help"
15:56-59 fg=DarkGray bg=Reset mod=NONE text="1/1 "
